# fastapi-modern-example

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: data_access.py  database.py  main.py  models.py  routes.py  scheduler.py  schemas.py  service.py  settings.py
