[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.7",
    "pre-commit>=4.1.0",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.7.1",
    "ruff>=0.9.3",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "apscheduler>=3.11.0",
]
